[package]
name = "axsyscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axhal = { path = "../axhal" }
axtask = { path = "../axtask" }

scheduler = { path = "../../crates/scheduler" }
log = "0.4"
crate_interface = { path = "../../crates/crate_interface" }
