[package]
name = "axsyscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
axhal = { path = "../axhal" }
task = { path = "../task" }
fork = { path = "../fork" }
sys = { path = "../sys" }
mmap = { path = "../mmap" }
fileops = { path = "../fileops" }
memory_addr = { path = "../../crates/memory_addr" }
