[package]
name = "axsyscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
axhal = { path = "../axhal" }
task = { path = "../task" }
fork = { path = "../fork" }
exec = { path = "../exec" }
sys = { path = "../sys" }
mmap = { path = "../mmap" }
fileops = { path = "../fileops" }
axtype = { path = "../../crates/axtype" }
axerrno = { path = "../../crates/axerrno" }
