[package]
name = "exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
mmap = { path = "../mmap" }
task = { path = "../task" }
axhal = { path = "../axhal" }
mutex_base = { path = "../mutex_base" }
mutex_ops = { path = "../mutex_ops" }
axfile = { path = "../axfile" }
axerrno = { path = "../../crates/axerrno" }
memory_addr = { path = "../../crates/memory_addr" }
elf = { path = "../../crates/elf" }
axio = { path = "../../crates/axio" }
spinlock = { path = "../../crates/spinlock" }
kernel_guard = { path = "../../crates/kernel_guard" }
