[package]
name = "exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
mmap = { path = "../mmap" }
task = { path = "../task" }
axhal = { path = "../axhal" }
axfile = { path = "../axfile" }
mutex = { path = "../mutex" }
axerrno = { path = "../../crates/axerrno" }
axtype = { path = "../../crates/axtype" }
elf = { path = "../../crates/elf" }
axio = { path = "../../crates/axio" }
preempt_guard = { path = "../../crates/preempt_guard" }
