[package]
name = "fileops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
task = { path = "../task" }
axfile = { path = "../axfile" }
axerrno = { path = "../../crates/axerrno" }
spinlock = { path = "../../crates/spinlock" }
axhal = { path = "../axhal" }
mutex = { path = "../mutex" }
