[package]
name = "fileops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
task = { path = "../task" }
axfile = { path = "../axfile" }
mutex = { path = "../mutex" }
axerrno = { path = "../../crates/axerrno" }
axio = { path = "../../crates/axio" }
axtype = { path = "../../crates/axtype" }
axhal = { path = "../axhal" }
early_console = { path = "../../crates/early_console" }
riscv = "0.10"
