[package]
name = "fork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bitflags = "2.2"
task = { path = "../task" }
taskctx = { path = "../taskctx" }
run_queue = { path = "../run_queue", features = ["sched_cfs"] }
axerrno = { path = "../../crates/axerrno" }
axhal = { path = "../../modules/axhal" }
