[package]
name = "linux_adaptor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
axlog = { workspace = true }
axconfig = { workspace = true }
axhal = { workspace = true }
axalloc = { workspace = true }

memory_addr = "0.3"
