[package]
name = "mm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
axhal = { path = "../axhal" }
mutex = { path = "../mutex" }
axalloc = { path = "../axalloc" }
axfile = { path = "../axfile" }
axio = { path = "../../crates/axio" }
memory_addr = { path = "../../crates/memory_addr" }
spinlock = { path = "../../crates/spinlock" }
