[package]
name = "mm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
axhal = { path = "../axhal" }
axfile = { path = "../axfile" }
axalloc = { path = "../axalloc" }
mutex = { path = "../mutex" }
spinbase = { path = "../../crates/spinbase" }
axtype = { path = "../../crates/axtype" }
