[package]
name = "mmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
axhal = { path = "../axhal" }
axfile = { path = "../axfile" }
task = { path = "../task" }
signal = { path = "../signal" }
mm = { path = "../mm" }
axerrno = { path = "../../crates/axerrno" }
axio = { path = "../../crates/axio" }
memory_addr = { path = "../../crates/memory_addr" }
axalloc = { path = "../axalloc" }
