[package]
name = "mutex_ops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
task = { path = "../task" }
run_queue = { path = "../run_queue" }
mutex_base = { path = "../mutex_base" }
tid_map = { path = "../tid_map" }
