[package]
name = "signal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
cfg-if = "1.0"
taskctx = { path = "../taskctx" }
task = { path = "../task" }
axhal = { path = "../axhal" }
axtype = { path = "../../crates/axtype" }
axerrno = { path = "../../crates/axerrno" }
