[package]
name = "sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
taskctx = { path = "../taskctx" }
axconfig = { path = "../axconfig" }
axerrno = { path = "../../crates/axerrno" }
axhal = { path = "../axhal" }
