[package]
name = "sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
taskctx = { path = "../taskctx" }
task = { path = "../task" }
run_queue = { path = "../run_queue" }
axalloc = { path = "../axalloc" }
axconfig = { path = "../axconfig" }
axerrno = { path = "../../crates/axerrno" }
axtype = { path = "../../crates/axtype" }
axhal = { path = "../axhal" }
