[package]
name = "task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
axhal = { path = "../axhal" }
mm = { path = "../mm" }
fstree = { path = "../fstree" }
taskctx = { path = "../taskctx" }
filetable = { path = "../filetable" }
wait_queue = { path = "../wait_queue" }
spinbase = { path = "../../crates/spinbase" }
spinpreempt = { path = "../../crates/spinpreempt" }
